--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ ego-tree = "0.6.2"
 toodee = "0.3.0"
 num-bigint = "0.4.3"
 pathfinding = "4.0.0"
+serde_json = "1.0.89"
+serde = { version = "1.0", features = ["derive"] }
