--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ num-bigint = "0.4.3"
 pathfinding = "4.0.0"
 serde_json = "1.0.89"
 serde = { version = "1.0", features = ["derive"] }
+petgraph = "0.6.2"
